<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickupGameFinder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_game">Create a Game</string>
    <string name="submit_button">Submit</string>
    <string name="name_textfield">Enter your name..</string>
    <string name="sport">Sport</string>

    <string-array name="sports_array">
        <item>Basketball</item>
        <item>Football</item>
        <item>Football(American)</item>
        <item>Tennis(Singles)</item>
        <item>Tennis(Doubles)</item>
        <item>Other (mention below)</item>
    </string-array>

    <string name="date">Date</string>
    <string name="extra_info">Enter any extra info...</string>
    <string name="venue">Venue</string>
    <string name="createGame">Create a Game</string>
    <string name="title_activity_display_game_details">DisplayGameDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="time">Time</string>

    <string-array name="number_of_players_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="title_activity_search_map">SearchMapActivity</string>
    <string name="title_activity_search_games_on_map">SearchGamesOnMapActivity</string>

</resources>
