<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayGameDetailsActivity" >

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="43dp"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/venueTextView"
        android:layout_alignTop="@+id/sportsImage"
        android:text="@string/sport"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/venueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="39dp"
        android:text="@string/venue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/sportsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/infoTextView"
        android:layout_alignRight="@+id/dateTextView"
        android:layout_marginBottom="53dp"
        android:src="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sportTextView"
        android:layout_below="@+id/venueTextView"
        android:layout_marginTop="109dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/join_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoTextView"
        android:layout_marginTop="24dp"
        android:onClick="joinGameButtonPressed"
        android:text="Join Game" />

    <TextView
        android:id="@+id/playersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/infoTextView"
        android:layout_below="@+id/sportTextView"
        android:layout_marginTop="24dp"
        android:text="Players"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>